feat: switch to ITWS Precip TRACON product (id 9850)